fixed invisible button problem

--- a/css/style.css
+++ b/css/style.css
@@ -664,7 +664,7 @@ footer{
  /*flip cards for vision start*/
 
 .member-img img{
-   padding: 1.5rem 1.5rem 0 1.5rem;
+   padding: 0.5rem;
    height: 280px;
 }
 
@@ -893,14 +893,15 @@ footer{
 /*button starts*/
 .trans-btn{
    background-color: transparent;
+   color: black;
    font-family: 'Montserrat', sans-serif;
    display: inline-block;
    padding: 7px 18px 7px;
     text-align: center;
     text-decoration: none;
     font-size: 18px;
-    border: solid 1.4px;
-    border-radius: 18px;
+    border: 1.4px solid black;
+    border-radius: 20px;
 }
 
 .trans-btn:hover{
@@ -1307,7 +1308,16 @@ footer{
       background-image: none;
       flex-direction: column;
       align-items: center;
+      padding-bottom: 100px;
+      display: table;
    }
+
+   .event-image{
+      padding-bottom: 100px;
+   }
+
+   .event-description { display: table-footer-group; } /*description always on bottom*/
+   .event-image { display: table-header-group; } /*image always on top*/
 
    .slider{
       height: 330px;
